tests/knowledge/context/aws/scenarios/cross_version/auto_scaling_group/launch-template-default-settings/cloudformation.yaml
AWSTemplateFormatVersion: "2010-09-09"

Parameters:
  LatestAmiId:
    Type: String
    Default: "ami-03c53cb2507dda8ae"

Resources:
  TestAutoscalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: "test-autoscaling-group"
      MaxSize: 5
      MinSize: 2
      VPCZoneIdentifier:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      LaunchTemplate:
        LaunchTemplateId: !Ref TestLaunchTemplate
        Version: !GetAtt TestLaunchTemplate.LatestVersionNumber

  TestLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: "test-launch-template"
      LaunchTemplateData:
        ImageId: !Ref LatestAmiId
        InstanceType: "t2.micro"

  Main:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "172.16.0.0/16"

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Main
      MapPublicIpOnLaunch: true
      CidrBlock: "172.16.100.0/24"
      Tags:
        - Key: "Name"
          Value: "private-subnet-1"

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Main
      MapPublicIpOnLaunch: false
      CidrBlock: "172.16.101.0/24"
      Tags:
        - Key: "Name"
          Value: "private-subnet-2"

  AllowHTTP:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow http"
      VpcId: !Ref Main
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          FromPort: 80
          ToPort: 80
          IpProtocol: "tcp"
      SecurityGroupEgress:
        - CidrIp: "0.0.0.0/0"
          FromPort: 0
          ToPort: 0
          IpProtocol: "-1"

  AllowSSH:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow ssh"
      VpcId: !Ref Main
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          FromPort: 22
          ToPort: 22
          IpProtocol: "tcp"
      SecurityGroupEgress:
        - CidrIp: "0.0.0.0/0"
          FromPort: 0
          ToPort: 0
          IpProtocol: "-1"
